--- a/.travis.yml
+++ b/.travis.yml
@@ -22,11 +22,13 @@ matrix:
             - doxygen
       # env:
         # - MATRIX_EVAL="CXX_COMPILER=g++-7; sudo update-alternatives --install /usr/bin/gcov gcov /usr/bin/gcov-7 90"
-
 before_install:
   - eval "${MATRIX_EVAL}"
   - PARENTDIR=$(pwd)
   - mkdir $PARENTDIR/build
+
+before_script:
+  - cd /tmp && git clone --recurse-submodules https://github.com/foonathan/standardese && cd standardese && mkdir build && cd build && cmake .. && make && cp tool/standardese /usr/local/bin
 
 install:
   - cd $PARENTDIR/build
