started palying with standardese documentation tool

--- a/.travis.yml
+++ b/.travis.yml
@@ -19,6 +19,8 @@ matrix:
             - iwyu
             - valgrind
             - clang-tidy
+            - libclang-dev
+            - libboost-dev
             - doxygen
       # env:
         # - MATRIX_EVAL="CXX_COMPILER=g++-7; sudo update-alternatives --install /usr/bin/gcov gcov /usr/bin/gcov-7 90"
@@ -27,11 +29,11 @@ before_install:
   - PARENTDIR=$(pwd)
   - mkdir $PARENTDIR/build
 
-before_script:
-  - etc/./standardese
-  # - cd /tmp && git clone --recurse-submodules https://github.com/foonathan/standardese && cd standardese && mkdir build && cd build && cmake .. && make && cp tool/standardese /usr/local/bin
+# before_script:
+  # - etc/./standardese
 
 install:
+  - cd /tmp && git clone --recurse-submodules https://github.com/foonathan/standardese && cd standardese && mkdir build && cd build && cmake .. && make && cp tool/standardese /usr/local/bin
   - cd $PARENTDIR/build
   - cmake $PARENTDIR -DCMAKE_BUILD_TYPE=Debug
   - make
