--- a/.travis.yml
+++ b/.travis.yml
@@ -26,7 +26,7 @@ matrix:
         # - MATRIX_EVAL="CXX_COMPILER=g++-7; sudo update-alternatives --install /usr/bin/gcov gcov /usr/bin/gcov-7 90"
 before_install:
   - PARENTDIR=$(pwd)
-  - cd /tmp && git clone --recurse-submodules https://github.com/foonathan/standardese && cd standardese && mkdir build && cd build && cmake .. && make && sudo cp tool/standardese /usr/local/bin
+  # - cd /tmp && git clone --recurse-submodules https://github.com/foonathan/standardese && cd standardese && mkdir build && cd build && cmake .. && make && sudo cp tool/standardese /usr/local/bin
   - cd $PARENTDIR && mkdir $PARENTDIR/build
 
 # before_script:
@@ -34,7 +34,7 @@ before_install:
 
 install:
   - cd $PARENTDIR/build
-  - cmake $PARENTDIR -DCMAKE_BUILD_TYPE=Debug
+  - cmake $PARENTDIR -DCMAKE_BUILD_TYPE=FastDebug
   - make
 
 script:
