--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,19 +28,18 @@ set(${CMAKE_PROJECT_NAME}_VERSION_MAJOR         0)
 set(${CMAKE_PROJECT_NAME}_VERSION_MINOR         1)
 set(${CMAKE_PROJECT_NAME}_VERSION_PATCH         0)
 set(PROJECT_VERSION                             "${${CMAKE_PROJECT_NAME}_VERSION_MAJOR}.${${CMAKE_PROJECT_NAME}_VERSION_MINOR}.${${CMAKE_PROJECT_NAME}_VERSION_PATCH}")
+set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH}     "${PROJECT_PATH}/cmake")
 set(PROJECT_PATH                               "${CMAKE_CURRENT_SOURCE_DIR}")
 set(PROJECT_BUILD                              "${PROJECT_BINARY_DIR}")
-set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH}     "${PROJECT_PATH}/cmake")
-set(SRC_PATH                                   "${PROJECT_PATH}/src")
-set(TEST_SRC_PATH                              "${PROJECT_PATH}/test")
-set(EXTERNAL_PATH                              "${PROJECT_PATH}/thrd")
-set(LIB_PATH                                   "${PROJECT_BUILD}/lib")
-set(BIN_PATH                                   "${PROJECT_BUILD}/bin")
-set(INCLUDE_PATH                               "${PROJECT_BUILD}/include")
-set(DOCS_PATH                                  "${PROJECT_BUILD}/docs")
-set(TEST_PATH                                  "${PROJECT_BUILD}/test")
-set(EXECUTABLE_OUTPUT_PATH                      ${BIN_PATH})
-set(LIBRARY_OUTPUT_PATH                         ${LIB_PATH})
+set(MAIN_SRC                                   "${PROJECT_PATH}/src")
+set(TEST_SRC                                   "${PROJECT_PATH}/test")
+set(THRD_SRC                                   "${PROJECT_PATH}/thrd")
+set(LIB_BUILD                                  "${PROJECT_BUILD}/lib")
+set(BIN_BUILD                                  "${PROJECT_BUILD}/bin")
+set(INCLUDE_BUILD                              "${PROJECT_BUILD}/include")
+set(DOCS_BUILD                                 "${PROJECT_BUILD}/docs")
+set(EXECUTABLE_OUTPUT_PATH                     ${BIN_BUILD})
+set(LIBRARY_OUTPUT_PATH                        ${LIB_BUILD})
 
 
 ####### BUILD TYPE #######
