moved some headers to external

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,7 +28,7 @@ set(${CMAKE_PROJECT_NAME}_VERSION_MAJOR         0)
 set(${CMAKE_PROJECT_NAME}_VERSION_MINOR         1)
 set(${CMAKE_PROJECT_NAME}_VERSION_PATCH         0)
 set(PROJECT_VERSION                             "${${CMAKE_PROJECT_NAME}_VERSION_MAJOR}.${${CMAKE_PROJECT_NAME}_VERSION_MINOR}.${${CMAKE_PROJECT_NAME}_VERSION_PATCH}")
-set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH}     "${PROJECT_PATH}/cmake")
+set(CMAKE_MODULE_PATH                          "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
 set(PROJECT_PATH                               "${CMAKE_CURRENT_SOURCE_DIR}")
 set(PROJECT_BUILD                              "${PROJECT_BINARY_DIR}")
 set(MAIN_SRC                                   "${PROJECT_PATH}/src")
