test coverage with kcov improved

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -74,10 +74,10 @@ elseif((cmake_build_type_tolower STREQUAL "debug") OR (cmake_build_type_tolower 
     option(BUILD_MAIN                              "Build main function"            ON)
     option(BUILD_TESTS                             "Build test units"               ON)
     option(ENABLE_COVERAGE                         "Enable testing coverage"        ON)
+    option(ENABLE_SANITIZERS                       "Enable langtidy and cppcheck"   ON)
     if(cmake_build_type_tolower STREQUAL "debug")
-        option(ENABLE_DOCUMENT                         "Enable documentation"           ON)
-        option(ENABLE_MEMCHECK                         "Enable memory leak check"       ON)
-        option(ENABLE_SANITIZERS                       "Enable langtidy and cppcheck"   ON)
+        # option(ENABLE_DOCUMENT                         "Enable documentation"           ON)
+        # option(ENABLE_MEMCHECK                         "Enable memory leak check"       ON)
     endif()
 endif()
 message ("BUILD TYPE: ${CMAKE_BUILD_TYPE}\n")
@@ -103,7 +103,7 @@ if(BUILD_TESTS)
         get_filename_component(NAME ${PATH} NAME_WE)
         set(NAME ${PROJECT_NAME}_${NAME})
         add_executable(${NAME} ${PATH})
-        target_link_libraries(${NAME} PRIVATE doctest)
+        target_link_libraries(${NAME} PRIVATE doctest classic)
         add_test(NAME ${NAME} COMMAND ${EXECUTABLE_OUTPUT_PATH}/${NAME})
         if(ENABLE_COVERAGE)
             add_custom_command(TARGET ${NAME} POST_BUILD COMMAND kcov ${PROJECT_BINARY_DIR}/cover ${PROJECT_BINARY_DIR}/bin/${NAME})
