github actions removed

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -76,8 +76,8 @@ elseif((cmake_build_type_tolower STREQUAL "debug") OR (cmake_build_type_tolower 
     option(ENABLE_COVERAGE                         "Enable testing coverage"        ON)
     option(ENABLE_SANITIZERS                       "Enable langtidy and cppcheck"   ON)
     if(cmake_build_type_tolower STREQUAL "debug")
-        # option(ENABLE_DOCUMENT                         "Enable documentation"           ON)
-        # option(ENABLE_MEMCHECK                         "Enable memory leak check"       ON)
+        option(ENABLE_DOCUMENT                         "Enable documentation"           ON)
+        option(ENABLE_MEMCHECK                         "Enable memory leak check"       ON)
     endif()
 endif()
 message ("BUILD TYPE: ${CMAKE_BUILD_TYPE}\n")
