--- a/.travis.yml
+++ b/.travis.yml
@@ -26,7 +26,7 @@ matrix:
         # - MATRIX_EVAL="CXX_COMPILER=g++-7; sudo update-alternatives --install /usr/bin/gcov gcov /usr/bin/gcov-7 90"
 before_install:
   - PARENTDIR=$(pwd)
-  - cd /tmp && git clone --recurse-submdules https://github.com/foonathan/standardese && cd standardese && mkdir build && cd build && cmake .. && make && sudo cp tool/standardese /usr/local/bin
+  - cd /tmp && git clone --recursive https://github.com/foonathan/standardese && cd standardese && mkdir build && cd build && cmake .. && make && sudo cp tool/standardese /usr/local/bin
   - cd $PARENTDIR && mkdir $PARENTDIR/build
 
 # before_script:
