--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,16 +1,56 @@
-#######################################################################
-#                   SOURCE CMAKE
-#######################################################################
 ###### ADD THE MAIN FILE as EXECUTABLE ######
 add_executable(${PROJECT_NAME} main.cpp)
 file(MAKE_DIRECTORY "${INCLUDE_BUILD}")
 
-file(GLOB HEAD_FILES "inc/*.h" "inc/*.hpp")
-file(GLOB CODE_FILES "inc/*.c" "inc/*.cpp")
-file(GLOB SINGLE_FILES "sgl/*.hpp")
+
+##############################################################################################################################################
+#                   THIRD PARTY PACKAGES
+##############################################################################################################################################
+#Use fmtlib for formatting
+add_subdirectory(${THRD_SRC}/fmt  ${THRD_SRC}/fmt/build EXCLUDE_FROM_ALL)
+target_set_warnings(fmt DISABLE ALL) # Treat fmtlib as a system include as to ignore the warnings
+# Add new external (non-interface) targets to this list
+set_target_properties(fmt PROPERTIES FOLDER "external")
+
+#Use spdlog for logging, and tell it to use our version of fmtlib
+add_subdirectory(${THRD_SRC}/spdlog ${THRD_SRC}/spdlog/build EXCLUDE_FROM_ALL)
+target_compile_definitions(spdlog INTERFACE SPDLOG_FMT_EXTERNAL)
+file(MAKE_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}/logs")
+
+#Doctest for unit tests
+# add_library(${THRD_SRC}/doctest INTERFACE)
+# target_include_directories(
+    # doctest
+    # INTERFACE
+    # doctest/doctest # note : will expose the parts/ folder...
+# )
+# include_directories(${DOCTEST_INCLUDE_DIR})
+hunter_add_package(doctest)
+find_package(doctest REQUIRED)
 
 
-###### INTERNAL LIBRARIES ######
+##############################################################################################################################################
+#                   EXTERNAL
+##############################################################################################################################################
+# LET LD SEARCH HERE (avoid, better use find_library())
+# link_directories(/usr/lib)
+
+# EIGEN
+# find_package(Eigen3 REQUIRED)
+# if(Eigen3_FOUND)
+    # message ("Eigen3 FOUND")
+    # target_include_directories(${PROJECT_NAME} PRIVATE ${EIGEN3_INCLUDE_DIR})
+# NCURSES
+find_package(Curses REQUIRED)
+if(CURSES_FOUND)
+    message ("CURSES_FOUND")
+    target_include_directories(${PROJECT_NAME} PRIVATE ${CURSES_INCLUDE_DIR})
+endif()
+
+
+##############################################################################################################################################
+#                   SOURCE
+##############################################################################################################################################
 #function to add internal libs and copy headers
 function (add_filelib FILE)
     get_filename_component(NAME ${FILE} NAME_WE)
@@ -35,62 +75,35 @@ function (add_filehead FILE )
     target_sources(${NAME} INTERFACE ${HEAD})
 endfunction(add_filehead)
 
-#automatically add all libraries in /src
-foreach(A_FILE ${CODE_FILES})
-    # add_filelib(${PROJECT_PATH}/src/inc/classic.cpp)
-    add_filelib(${A_FILE})
-    message(STATUS "added library: ${A_FILE}")
-endforeach()
-#automatically add all header-onl-libraries in /sgl
-foreach(A_FILE ${SINGLE_FILES})
-    # add_filehead(${PROJECT_PATH}/src/sgl/utils.hpp)
-    add_filehead(${A_FILE})
-    message(STATUS "added header: ${A_FILE}")
-endforeach()
+add_filelib(${MAIN_SRC}/inc/classic.cpp)
+target_link_libraries(classic
+    PRIVATE
+    fmt
+)
 
-
-###### EXTERNAL PACKAGES ######
-# LET LD SEARCH HERE (avoid, better use find_library())
-# link_directories(/usr/lib)
-
-# EIGEN
-# find_package(Eigen3 REQUIRED)
-# if(Eigen3_FOUND)
-    # message ("Eigen3 FOUND")
-    # target_include_directories(${PROJECT_NAME} PRIVATE ${EIGEN3_INCLUDE_DIR})
-# else()
-    # message (FATAL_ERROR "Cannot find Eigen3")
-# endif()
+add_filehead(${MAIN_SRC}/sgl/utils.hpp)
 
 
 ##### INCLUDE HEADERS
-#per target include
-target_include_directories(${PROJECT_NAME} PUBLIC ${PROJECT_SOURCE_DIR}/src)
-#or all in src include
-include_directories(${PROJECT_SOURCE_DIR}/src})
+target_include_directories(${PROJECT_NAME} PUBLIC ${PROJECT_SOURCE_DIR}/src) #per target include
+include_directories(${PROJECT_SOURCE_DIR}/src}) #or all in src include
 
-
-###### LINK OTHER LIBRARIES ######
-target_link_libraries(classic
-    PRIVATE
-        fmt
-        doctest)
-
-
-###### LAST LINK WITH EXECUTABLE ######
+##############################################################################################################################################
+#                   SOURCE
+##############################################################################################################################################
 if(BUILD_MAIN)
     target_link_libraries(${PROJECT_NAME}
         PRIVATE
             classic
         PUBLIC
             fmt
-            # spdlog
             # ncurses${CMAKE_STATIC_LIBRARY_SUFFIX}
     )
 endif()
 
-
-#### TESGIN ############
+##############################################################################################################################################
+#                   TESTS
+###############################################################################################################################################
 if(BUILD_TESTS)
     include(CTest)
     enable_testing()
