remove cmake mistake/misspell

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,7 +29,7 @@ set(${CMAKE_PROJECT_NAME}_VERSION_PATCH         0)
 set(PROJECT_VERSION                             "${${CMAKE_PROJECT_NAME}_VERSION_MAJOR}.${${CMAKE_PROJECT_NAME}_VERSION_MINOR}.${${CMAKE_PROJECT_NAME}_VERSION_PATCH}")
 set(CMAKE_MODULE_PATH                          "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
 set(PROJECT_PATH                               "${CMAKE_CURRENT_SOURCE_DIR}")
-set(PROJECT_BUILD                              "${PROJECT_PATH}/build}")
+set(PROJECT_BUILD                              "${PROJECT_PATH}/build")
 set(MAIN_SRC                                   "${PROJECT_PATH}/src")
 set(TEST_SRC                                   "${PROJECT_PATH}/test")
 set(THRD_SRC                                   "${PROJECT_PATH}/thrd")
