--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 ##############################################################################################################################################
-#                 CMAKE
+#                 GLOBAL
 ##############################################################################################################################################
 ###### HUNTER PACKAGE MANAGER ######
 include("cmake/HunterGate.cmake")
@@ -8,7 +8,7 @@ HunterGate(
     SHA1 "e14bc153a7f16d6a5eeec845fb0283c8fad8c358"
 )
 
-###### GENERAL SETTINGS ######
+###### VERSION AND NAME ######
 cmake_minimum_required(VERSION 3.10)
 set(CMAKE_EXPORT_COMPILE_COMMANDS 1)
 set(PROJECT_NAME "cplate")
@@ -19,7 +19,9 @@ endif ((NOT PROJECT_NAME))
 message ("\nPROJECT: ${CMAKE_PROJECT_NAME}")
 
 
-######  VARIABLES  ######
+##############################################################################################################################################
+#               VARIABLES
+##############################################################################################################################################
 set(${CMAKE_PROJECT_NAME}_SUMMARY               "A simple CMAKE and CXX template")
 set(${CMAKE_PROJECT_NAME}_VENDOR_NAME           "bresilla")
 set(${CMAKE_PROJECT_NAME}_VENDOR_CONTACT        "trim.bresilla@gmail.com")
@@ -30,18 +32,23 @@ set(PROJECT_VERSION                             "${${CMAKE_PROJECT_NAME}_VERSION
 set(CMAKE_MODULE_PATH                          "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
 set(PROJECT_PATH                               "${CMAKE_CURRENT_SOURCE_DIR}")
 set(PROJECT_BUILD                              "${PROJECT_PATH}/build")
-set(MAIN_SRC                                   "${PROJECT_PATH}/src")
+
+set(SRC_SRC                                    "${PROJECT_PATH}/source")
+set(INC_SRC                                    "${PROJECT_PATH}/include")
+set(EXT_SRC                                    "${PROJECT_PATH}/external")
+set(UTL_SRC                                    "${PROJECT_PATH}/util")
 set(TEST_SRC                                   "${PROJECT_PATH}/test")
-set(THRD_SRC                                   "${PROJECT_PATH}/thrd")
+
 set(LIB_BUILD                                  "${PROJECT_BUILD}/lib")
 set(BIN_BUILD                                  "${PROJECT_BUILD}/bin")
-set(INCLUDE_BUILD                              "${PROJECT_BUILD}/include")
 set(DOCS_BUILD                                 "${PROJECT_BUILD}/docs")
 set(EXECUTABLE_OUTPUT_PATH                     ${BIN_BUILD})
 set(LIBRARY_OUTPUT_PATH                        ${LIB_BUILD})
 
 
-####### BUILD TYPE #######
+##############################################################################################################################################
+#                 BUILD
+##############################################################################################################################################
 string(TOLOWER "${CMAKE_BUILD_TYPE}" cmake_build_type_tolower)
 if(NOT cmake_build_type_tolower STREQUAL "debug" AND NOT cmake_build_type_tolower STREQUAL "release" AND NOT cmake_build_type_tolower STREQUAL "fastdebug" AND NOT cmake_build_type_tolower STREQUAL "fastrelease")
     message(FATAL_ERROR "Unknown build type \"${CMAKE_BUILD_TYPE}\". Allowed values are Debug, Release, FastDebug, and FastRelease (case-insensitive).")
@@ -51,7 +58,9 @@ if(NOT CMAKE_BUILD_TYPE)
 endif()
 
 
-####### COMPILER ######
+##############################################################################################################################################
+#                 COMPILER
+##############################################################################################################################################
 include(Warnings)
 if((cmake_build_type_tolower STREQUAL "release") OR (cmake_build_type_tolower STREQUAL "fastrelease"))
     set(CMAKE_CXX_FLAGS         "${CMAKE_CXX_FLAGS} -Wall -Wno-unknown-pragmas -Wno-sign-compare -Woverloaded-virtual -Wwrite-strings -Wno-unused")
@@ -76,11 +85,158 @@ elseif((cmake_build_type_tolower STREQUAL "debug") OR (cmake_build_type_tolower 
     endif()
 endif()
 message ("BUILD TYPE: ${CMAKE_BUILD_TYPE}\n")
-add_subdirectory(${PROJECT_SOURCE_DIR}/thrd EXCLUDE_FROM_ALL)
-add_subdirectory(${PROJECT_SOURCE_DIR}/src)
-
-
 #CPP STANDARD OPTIONS
 set(CMAKE_CXX_STANDARD 14)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
+
+
+##############################################################################################################################################
+#                   EXTERNAL
+##############################################################################################################################################
+#Use fmtlib for formatting
+add_subdirectory(${EXT_SRC}/fmt EXCLUDE_FROM_ALL)
+target_set_warnings(fmt DISABLE ALL) # Treat fmtlib as a system include as to ignore the warnings
+set_target_properties(fmt PROPERTIES FOLDER "external")
+
+#Use spdlog for logging, and tell it to use our version of fmtlib
+# add_subdirectory(${EXT_SRC}/spdlog ${EXT_SRC}/spdlog EXCLUDE_FROM_ALL)
+# target_compile_definitions(spdlog INTERFACE SPDLOG_FMT_EXTERNAL)
+# file(MAKE_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}/logs")
+
+
+##############################################################################################################################################
+#                   EXTERNAL
+##############################################################################################################################################
+# LET LD SEARCH HERE (avoid, better use find_library())
+# link_directories(/usr/lib)
+
+# EIGEN
+# find_package(Eigen3 REQUIRED)
+# if(Eigen3_FOUND)
+# message ("Eigen3 FOUND")
+# target_include_directories(${PROJECT_NAME} PRIVATE ${EIGEN3_INCLUDE_DIR})
+# NCURSES
+find_package(Curses REQUIRED)
+if(CURSES_FOUND)
+    message ("CURSES_FOUND")
+endif()
+
+
+##############################################################################################################################################
+#                   SOURCE
+##############################################################################################################################################
+
+file(GLOB UTIL_FILES "${UTL_SRC}/*.hpp")
+file(GLOB HEAD_FILES "${INC_SRC}/${PROJECT_NAME}/*.h" "${INC_SRC}/${PROJECT_NAME}/*.hpp")
+file(GLOB CODE_FILES "${SRC_SRC}/*.c" "${SRC_SRC}/*.cpp")
+
+#function to add internal libs
+function (add_sourcelib FILE)
+    get_filename_component(NAME ${FILE} NAME_WE)
+    get_filename_component(PATH ${FILE} DIRECTORY)
+    set(CODE ${PATH}/${NAME}.cpp)
+    add_library(${NAME} STATIC ${CODE})
+    if(ENABLE_SANITIZERS)
+        add_custom_command(TARGET ${NAME} POST_BUILD COMMAND clang-tidy ${FILE} -checks=*,-clang-diagnostic-unused-command-line-argument -header-filter=.*)
+        add_custom_command(TARGET ${NAME} POST_BUILD COMMAND cppcheck --enable=all ${FILE})
+    endif()
+endfunction(add_sourcelib)
+#function to add header only internal libraries
+function (add_headerlib FILE )
+    get_filename_component(NAME ${FILE} NAME_WE)
+    get_filename_component(PATH ${FILE} DIRECTORY)
+    set(HEAD ${PATH}/${NAME}.hpp)
+    add_library(${NAME} INTERFACE)
+    target_include_directories(${FILE} SYSTEM INTERFACE inc/)
+endfunction(add_headerlib)
+
+# add_sourcelib(${SRC_SRC}/classic.cpp)
+# target_link_libraries(classic
+    # PRIVATE
+    # fmt
+# )
+# add_headerlib(${UTL_SRC}/utils.hpp)
+
+# foreach(A_FILE ${CODE_FILES})
+    # add_sourcelib(${A_FILE})
+    # foreach(B_FILE ${HEAD_FILES})
+        # add_headerlib(${B_FILE})
+    # endforeach()
+# endforeach()
+
+add_library(all_lib ${UTIL_FILES} ${HEAD_FILES} ${CODE_FILES})
+target_compile_features(all_lib PUBLIC cxx_std_11)
+target_include_directories(all_lib PRIVATE ${INC_SRC} SYSTEM INTERFACE ${INC_SRC})
+
+##### INCLUDE HEADERS
+# target_include_directories(HEAD_FILES PRIVATE inc SYSTEM INTERFACE inc)
+# target_include_directories(UTIL_FILES PRIVATE inc SYSTEM INTERFACE inc)
+# include_directories(${INC_SRC})
+# include_directories(${UTL_SRC})
+
+
+##############################################################################################################################################
+#                   EXECUTABLE
+##############################################################################################################################################
+add_executable(${PROJECT_NAME} ${SRC_SRC}/${PROJECT_NAME}.cpp)
+
+if(BUILD_MAIN)
+target_link_libraries(${PROJECT_NAME}
+    PRIVATE
+        all_lib
+    PUBLIC
+        fmt::fmt-header-only
+)
+endif()
+
+
+##############################################################################################################################################
+#                   TESTS
+###############################################################################################################################################
+if(BUILD_TESTS)
+    include(CTest)
+    enable_testing()
+    set(BUILD_TESTING_BCKP ${BUILD_TESTING})
+    set(BUILD_TESTING OFF CACHE BOOL "Force disable of tests for external dependencies" FORCE)
+    # function to automatically set up testing for specific file
+    function (add_testing PATH)
+        get_filename_component(NAME ${PATH} NAME_WE)
+        set(NAME ${PROJECT_NAME}_${NAME})
+        add_executable(${NAME} ${PATH})
+        target_link_libraries(${NAME} PRIVATE doctest classic)
+        add_test(NAME ${NAME} COMMAND ${EXECUTABLE_OUTPUT_PATH}/${NAME})
+        if(ENABLE_COVERAGE)
+            add_custom_command(TARGET ${NAME} POST_BUILD COMMAND kcov --include-pattern=${SRC_SRC} ${PROJECT_BINARY_DIR}/cover ${PROJECT_BINARY_DIR}/bin/${NAME})
+        endif()
+    endfunction(add_testing)
+    # find each test and apply testing
+    file(GLOB TEST_FILES "test/*.c" "test/*.cpp")
+    if(BUILD_TESTS)
+        foreach(A_FILE ${TEST_FILES})
+            add_testing(${A_FILE})
+        endforeach()
+    endif()
+endif()
+
+###### CHECKING EXECUTABLE FOR MEMORY LEAK ######
+if(ENABLE_MEMCHECK)
+    add_custom_command(TARGET ${PROJECT_NAME} POST_BUILD COMMAND valgrind --leak-check=yes ${BIN_BUILD}/${PROJECT_NAME})
+endif()
+
+
+##############################################################################################################################################
+#                   DOCUMENTATION
+###############################################################################################################################################
+file(MAKE_DIRECTORY "${DOCS_BUILD}")
+if(ENABLE_DOCUMENT)
+    add_custom_command(TARGET ${PROJECT_NAME} POST_BUILD COMMAND standardese --output-format=html --input.blacklist_file=CMakeLists.txt ${SRC_SRC} WORKING_DIRECTORY ${DOCS_BUILD})
+endif()
+
+
+##############################################################################################################################################
+#                   INSTALLATION
+###############################################################################################################################################
+# install(TARGETS ${PROJECT_NAME} DESTINATION ${CMAKE_INSTALL_BINDIR})
+# install(DIRECTORY "${LIB_BUILD}/" DESTINATION ${CMAKE_INSTALL_LIBDIR})
+# install(DIRECTORY "${INCLUDE_BUILD}/" DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})
